2005-12-04  Bruno Haible  <bruno@clisp.org>

	* src/integer/conv/cl_I_to_digits.cc (I_to_digits_noshrink): Set
	erg->len at the end.

2005-12-04  Bruno Haible  <bruno@clisp.org>

	Extend the fixnum range from 32 bits to 61 bits on 64-bit platforms.
	* doc/cln.tex (gcd, jacobi): Take 'long' instead of 'int32' arguments.
	* include/cln/object.h (cl_value_shift): Define as 3, not 32, in the
	64-bit case.
	* include/cln/types.h (intVsize): New macro.
	(sintV, uintV): New types.
	* include/cln/integer.h (gcd): Take uintV arguments.
	* include/cln/numtheory.h (jacobi): Take sintV arguments.
	* src/complex/input/cl_N_read.cc (read_complex): Call FN_to_UV instead
	of FN_to_UL.
	* src/complex/transcendental/cl_C_expt_C.cc: Likewise.
	* src/float/dfloat/elem/cl_DF_scale_I.cc: Use uintV instead of uintL
	* src/float/dfloat/elem/cl_DF_from_RA.cc: Don't assume values >= 2^53
	and < 2^55 are always bignums.
	where appropriate.
	* src/float/ffloat/conv/cl_RA_to_float.cc: Call FN_to_UV instead of
	FN_to_UL.
	* src/float/ffloat/elem/cl_FF_from_RA.cc: Likewise.
	* src/float/ffloat/elem/cl_FF_scale_I.cc: Call FN_to_V instead of
	FN_to_L.
	* src/float/lfloat/elem/cl_LF_scale_I.cc: Likewise.
	* src/float/output/cl_F_dprint.cc: Likewise.
	* src/float/sfloat/elem/cl_SF_from_RA.cc: Call FN_to_UV instead of
	FN_to_UL.
	* src/float/sfloat/elem/cl_SF_scale_I.cc: Call FN_to_V instead of
	FN_to_L.
	* src/integer/cl_I.h (FN_to_UV): Renamed from FN_to_UL, change return
	type.
	(FN_to_V): Renamed from FN_to_L, change return type.
	(FN_V_zerop): Renamed from FN_L_zerop.
	(FN_V_minusp): Renamed from FN_L_minusp.
	(cl_I_constructor_from_L2, cl_I_constructor_from_UL2): Define as an
	inline function on 64-bit platforms.
	(V_to_I, UV_to_I): New macros.
	(pFN_maxlength_digits_at): Return an uintV instead of an uint32.
	(set_pFN_maxlength_digits_at): Take an uintV instead of an uint32.
	* src/integer/algebraic/cl_I_sqrtp.cc: Call FN_to_UV instead of
	FN_to_UL.